# animation-cw3

./: .clang-tidy  .gitignore  meson.build  resources.qrc
objects/: container.blend  particle.blend
src/: Animation.cpp  Animation.h  AnimationParameters.h  ContainerComponent.cpp  ContainerComponent.h  Forces.cpp  Forces.h  Kernel.h  LeftPanelWidget.cpp  LeftPanelWidget.h  MainWindow.cpp  MainWindow.h  Particle.cpp  Particle.h  main.cpp
src/qobject/: LeftPanelWidget.cpp  LeftPanelWidget.h  MainWindow.cpp  MainWindow.h  Scene.cpp  Scene.h  SceneObject.h
src/qobject/renderer/: RendererMesh.h  RendererWidget.cpp  RendererWidget.h  Shape.h
